@@ -19,11 +19,11 @@ import java.util.HashMap;
 
 import javax.servlet.ServletContext;
 
-import org.apache.chemistry.opencmis.commons.impl.ClassLoaderUtil;
 import org.apache.chemistry.opencmis.commons.server.CmisServiceFactory;
 import org.apache.chemistry.opencmis.server.impl.CmisRepositoryContextListener;
 import org.apache.logging.log4j.Logger;
 import org.frankframework.lifecycle.IbisInitializer;
+import org.frankframework.util.ClassUtils;
 import org.frankframework.util.LogUtil;
 import org.springframework.beans.factory.DisposableBean;
 import org.springframework.beans.factory.InitializingBean;
@@ -38,7 +38,7 @@ import org.springframework.web.context.ServletContextAware;
 @IbisInitializer
 public class CmisLifecycleBean implements ServletContextAware, InitializingBean, DisposableBean {
 
-	private Logger log = LogUtil.getLogger(this);
+	private final Logger log = LogUtil.getLogger(this);
 	private ServletContext servletContext;
 	private CmisServiceFactory factory;
 
@@ -48,7 +48,7 @@ public class CmisLifecycleBean implements ServletContextAware, InitializingBean,
 	}
 
 	@Override
-	public void destroy() throws Exception {
+	public void destroy() {
 		if (factory != null) {
 			factory.destroy();
 		}
@@ -76,9 +76,9 @@ public class CmisLifecycleBean implements ServletContextAware, InitializingBean,
 		String className = "org.frankframework.extensions.cmis.server.RepositoryConnectorFactory";
 
 		// create a factory instance
-		Object object = null;
+		Object object;
 		try {
-			object = ClassLoaderUtil.loadClass(className).newInstance();
+			object = ClassUtils.loadClass(className).getDeclaredConstructor().newInstance();
 		} catch (Exception e) {
 			log.warn("Could not create a services factory instance", e);
 			return null;
