@@ -93,7 +93,7 @@ public class ExecuteJdbcQuery extends BusEndpointBase {
 	}
 
 	private StringMessage doExecute(String datasource, QueryType queryType, String query, boolean trimSpaces, boolean avoidLocking, ResultType resultType) {
-		secLog.info(String.format("executing query [%s] on datasource [%s] queryType [%s] avoidLocking [%s]", query, datasource, queryType, avoidLocking));
+		secLog.info("executing query [%s] on datasource [%s] queryType [%s] avoidLocking [%s]".formatted(query, datasource, queryType, avoidLocking));
 
 		DirectQuerySender qs = createBean(DirectQuerySender.class);
 		String result;
@@ -129,7 +129,8 @@ public class ExecuteJdbcQuery extends BusEndpointBase {
 			}
 			message.close();
 		} catch (Exception e) {
-			throw new BusException("error executing query", e);
+			log.debug("error executing query", e);
+			throw new BusException("error executing query: "+e.getMessage(), 400);
 		} finally {
 			qs.close();
 		}
